вносит изменения в хедер

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -16,7 +16,7 @@
 
     <ul class="footer__contact contact">
       <li class="contact__item">
-        <a href="mailto:info@ipsum228.com?subject=Вопрос по деньгам" class="contact__link">
+        <a href="mailto:info@ipsum228.com?subject=Вопрос_по_деньгам" class="contact__link">
           <svg class="contact__img" width="15" height="12">
             <use xlink:href="img/icons/icons.svg#letter"></use>
           </svg>
