--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
   <main>
     <section class="promo">
       <div class="promo__wrap wrap">
-        <h1 class="promo__title"><span class="promo__title--blue">Lorem ipsum</span> dolor sit amet
-          consectetur<span class="promo__title--blue"> adipiscing</span> </h1>
+        <h1 class="promo__title"><span class="promo__title promo__title--blue">Lorem ipsum</span> dolor sit amet
+          consectetur<span class="promo__title promo__title--blue"> adipiscing</span> </h1>
         <h2 class="promo__caption">At vero eos et accusamus et iusto odio dignissimos ducimus!</h2>
         <ul class="promo__list">
           <li class="promo__item">Totam rem aperiam eaque ipsa</li>
@@ -27,7 +27,7 @@
 
     <section class="ordering">
       <div class="ordering__wrap wrap">
-        <h2 class="ordering__title">Оформление<span class="ordering__title--blue"> заказа</span></h2>
+        <h2 class="ordering__title">Оформление<span class="ordering__title ordering__title--blue"> заказа</span></h2>
         <p class="ordering__text">Перед заполнением формы ознакомьтесь с нашей схемой работы!</p>
 
         <ul class="procedure procedure__list ordering__procedure">
