--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,7 +2,7 @@
   <div class="header__wrap wrap">
     <a href="/" class="header__link header__link--logo">
       <p class="header__logo">
-        LoremIpsum.<span class="header__logo--blue">Net</span>
+        LoremIpsum.<span class="header__logo header__logo--blue">Net</span>
       </p>
     </a>
 
